--- a/public/templates/form.handlebars
+++ b/public/templates/form.handlebars
@@ -1,4 +1,4 @@
-<h1 style="color:blue;">Ingrese datos</h1>
+<h1>Productos</h1>
 <br>
 <div class="form-group">
     <label for="title"><b>Nombre</b></label>
@@ -10,7 +10,22 @@
 </div>
 <div class="form-group">
     <label for="thumbnail"><b>Imagen</b></label>
-    <input id="thumbnail" class="form-control" type="text" name="thumbnail">
+
+    <select name="thumbnail" id="thumbnail" required class="form-control">
+        <option selected disabled value="">Seleccionar imagen</option>
+        <option
+                value="https://cdn3.iconfinder.com/data/icons/education-209/64/plane-paper-toy-science-school-256.png">
+            avión</option>
+        <option
+                value="https://cdn3.iconfinder.com/data/icons/education-209/64/globe-earth-geograhy-planet-school-128.png">
+            Globo terráqueo</option>
+        <option
+                value="https://cdn3.iconfinder.com/data/icons/education-209/64/calculator-math-tool-school-128.png">
+            Calculadora</option>
+        <option
+                value="https://cdn3.iconfinder.com/data/icons/education-209/64/ruler-triangle-stationary-school-256.png">
+            Reglas</option>
+    </select>
 </div>
-<button id="botonEnviar" class="btn btn-success mt-3 mb-5">Enviar</button>
+<button id="botonEnviar" class="btn btn-primary mt-3 mb-5">Enviar</button>
 <button id="botonEliminarProductos" class="btn btn-danger mt-3 mb-5">Eliminar Productos</button>
