--- a/public/templates/table.handlebars
+++ b/public/templates/table.handlebars
@@ -1,30 +1,31 @@
 <h2>{{titulo}}</h2>
-{{#if hayProductos}}
-    <div class="table-responsive">
-        <table class="table table-dark">
-            <tr style="color: yellow;">
-                <th>Nombre</th>
-                <th>Precio</th>
-                <th>Imagen</th>
-                <th>Acciones</th>
-            </tr>
-            {{#each array_productos}}
+
+    <div class="">
+        {{#if hayProductos}}
+        <div class="table-responsive">
+            <table class="table table-hover table-striped">
                 <tr>
-                    <td>{{title}}</td>
-                    <td>$ {{price}}</td>
-                    <td><img src="{{thumbnail}}" alt="{{title}}" width="50"></td>
-                    <td>
-                        <button class="btn btn-danger" onclick="eliminarProducto({{id}})">Eliminar</button>
-                        <button class="btn btn-warning" onclick="editarProducto({{id}})">Editar</button>
-                    </td>
+                    <th>Imagen</th>
+                    <th>Nombre</th>
+                    <th>Precio</th>
+
+                    <th>Eliminar/Editar</th>
                 </tr>
-            {{/each}}
-        </table>
-{{else}}
-    <h3 class="alert alert-danger">No se encontraron {{titulo}}</h3>
-{{/if}}
-{{#if hayProductos}}
-    <div class="alert alert-success">
-        <h3>Total: {{total}}</h3>
+                {{#each array_productos}}
+                    <tr>
+                        <td><img src="{{thumbnail}}" alt="{{title}}" width="40"></td>
+                        <td>{{title}}</td>
+                        <td>$ {{price}}</td>
+
+                        <td>
+                            <button class="btn btn-danger" onclick="eliminarProducto({{id}})">Eliminar</button>
+                            <button class="btn btn-warning" onclick="editarProducto({{id}})">Editar</button>
+                        </td>
+                    </tr>
+                {{/each}}
+            </table>
+        {{else}}
+            <p class="alert alert-warning">No hay Artículos para mostrar...</p>
+        {{/if}}
     </div>
-{{/if}}
+    </div>
