--- a/public/templates/tableMessages.handlebars
+++ b/public/templates/tableMessages.handlebars
@@ -1,5 +1,6 @@
+<div class=" p-5">
 {{#if hayMensajes}}
-    <h1 style="color:blue;">{{titulo}}</h1>
+    <h1 >Mensajes</h1>
     {{#each array_mensajes}}
         <div class="row">
             <span style="color:blue;"><b>{{author.email}}</b>
@@ -11,3 +12,5 @@
 {{else}}
     <h3 class="alert alert-danger">No se encontraron Mensajes</h3>
 {{/if}}
+
+</div>
