--- a/public/templates/tableTest.handlebars
+++ b/public/templates/tableTest.handlebars
@@ -1,7 +1,7 @@
-<h2>Productos de Prueba. Recargar para ver nuevos</h2>
+
 <div class="table-responsive">
-    <table class="table table-dark">
-        <tr style="color: yellow;">
+    <table class="table">
+        <tr>
             <th>Nombre</th>
             <th>Precio</th>
             <th>Imagen</th>
