--- a/public/views/index.html
+++ b/public/views/index.html
@@ -5,43 +5,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sockets</title>
+    <title>passport</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+          integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js"></script>
 </head>
 
 <body>
-    <div class="container mt-3">
-        <div class="alert alert-success">
-            <div class="row">
-                <div class="col-8">
-                    <h3 id="titleWelcome"></h3>
-                </div>
-                <div class="col-4 justify-content-right">
-                    <button type="button" class="btn btn-success" id="buttonLogout">Desloguear</button>
-                </div>
+<div class="container mt-3">
+    <div class="alert alert-light shadow">
+        <div class="" style="display: flex;justify-content: space-between">
+            <div class="">
+                <h3 style="color: black" id="titleWelcome"></h3>
             </div>
-        </div>
-        <div class="alert alert-info">
-            <div class="row">
-                <a href="/api/productos-test" class="btn btn-secondary ml-5">Test</a>
-                <a href="/info" class="btn btn-secondary ml-5">Info</a>
-                <a href="/infoZip" class="btn btn-secondary ml-5">Info Zip</a>
-                <a href="/random" class="btn btn-secondary ml-5">Random</a>
+            <div class="">
+                <button type="button" class="btn btn-secondary" id="buttonLogout">Desloguear</button>
             </div>
-        </div>
-        <div class="jumbotron">
-            <div id="formProducts"></div>
-            <div id="tableProducts"></div>
-        </div>
-        <div class="jumbotron">
-            <div id="mensajes"></div>
-            <div id="tableMensajes"></div>
         </div>
     </div>
+
+        <div class="col-md-3">
+            <h3>links</h3>
+            <nav class="navbar navbar-light bg-light" >
+                <a href="/api/productos-test" class=" btn btn-dark" style="font-size: 15px;">Test</a>
+                <a href="/info" class=" btn btn-dark" style="font-size: 15px;">Info</a>
+                <a href="/random" class=" btn btn-dark" style="font-size: 15px;">Random</a>
+            </nav>
+
+
+            <hr>
+        </div>
+
+    <div class="row mt-3 shadow p-3 m-0">
+        <div class="col-md-4" style="border-right: 1px solid darkgrey">
+            <div id="formProducts"></div>
+        </div>
+        <div class="col-md-8">
+            <div id="tableProducts"></div>
+        </div>
+        <div class="col-md-12">
+            <hr>
+        </div>
+
+    </div>
+    <div class="row mt-3 shadow p-3 m-0 mt-5">
+        <div class="col-md-4" style="border-right: 1px solid darkgrey">
+            <div id="mensajes"></div>
+        </div>
+        <div class="col-md-8">
+            <div id="tableMensajes"></div>
+        </div>
+        <div class="col-md-12">
+            <hr>
+        </div>
+    </div>
+</div>
 </body>
 
 <script src="../js/index.js" type="module"></script>
