--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -5,23 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>passport</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 </head>
 
 <body>
     <div class="container mt-3">
-        <form class="jumbotron" action="/api/signup" method="post" role="form" autocomplete="off">
-            <h1 style="color:blue;" class="mb-2">Registro de Usuario</h1>
-            <input class="form-control mt-2" type="text" id="name" name="username" placeholder="Usuario"
-                required="true">
-            <input class="form-control mt-2" type="password" id="password" name="password" placeholder="Contraseña"
-                required="true">
-            <button class="btn btn-success mt-3 mb-5" id="btn-register" type="submit">Register</button>
-            <a class="btn btn-success mt-3 mb-5" id="btn-redirect-login" href="/login">Ir a Login</a>
+        <form class="col-md-6  card shadow"  style="margin: 100px auto" action="/api/signup" method="post" role="form" autocomplete="off">
+            <h1 style="text-align: center" class="mb-5">Registro de Usuario</h1>
+            <label class="mt-2" for="username">Nombre</label>
+            <input class="form-control " type="text" id="name" name="username" placeholder="Usuario" required="true">
+            <label class="mt-2" for="password">Contraseña</label>
+            <input class="form-control " type="password" id="password" name="password" placeholder="Contraseña" required="true">
+            <button class="btn btn-success mt-3 mb-1" id="btn-register" type="submit" >Register</button>
+            <a class="btn btn-primary mt-0 mb-5" id="btn-redirect-login" href="/login">Ir a Login</a>
         </form>
     </div>
 </body>
-
 </html>
